# self-Multi-AI-Agent-Advanced-Use-Cases-with-crewAI

./: README.md  main.py  pyproject.toml
crew_1_automated_project_drafter/: L_1.ipynb  results_as_per_original_notebook.md  results_barbecue_event_notebook.md  self_L_1_barbecue_event.ipynb
crew_2_external_integration_project_progress_report/: L_2.ipynb
crew_3_agentic_sales_pipeline/: L_3.ipynb  crewai_flow.html  crewai_flow_complex.html  crewai_flow_graph.html
crew_4_support_data_insight_analysis/: L_4.ipynb  training.pkl  training_data.pkl
