[project]
name = "self-multi-ai-agent-advanced-use-cases-with-crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.15"
dependencies = [
    "crewai==0.75",
    "crewai-tools==0.13.2",
    "pandas==2.2.3",
    "setuptools==68.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
